--- a/site.yml
+++ b/site.yml
@@ -1,5 +1,5 @@
 title : Hugo Zhu
-tagline: programming software
+tagline: Programming Software Architecture Java Golang Raspberry Pi Web
 author :
   name : Hugo Zhu
   email : hugozhu@gmail.com
@@ -8,9 +8,10 @@ author :
   feedburner : hugozhu
 
 navigation :
+  - raspberrypi.md  
+  - pages.html
   - archive.html
   - tags.html
   - categories.html
-  - pages.html
   - about.md
   
