changed homepage content

--- a/site.yml
+++ b/site.yml
@@ -8,7 +8,7 @@ author :
   feedburner : hugozhu
 
 navigation :
-  - raspberrypi.md  
+  - posts.md  
   - pages.html
   - archive.html
   - tags.html
