--- a/site.yml
+++ b/site.yml
@@ -1,5 +1,5 @@
 title : Hugo Zhu
-tagline: Programming Software Architecture Java Golang Raspberry Pi Web
+tagline: 树莓派 Programming Software Architecture Java Golang Raspberry Pi Web
 author :
   name : Hugo Zhu
   email : hugozhu@gmail.com
