--- a/config.yml
+++ b/config.yml
@@ -16,7 +16,7 @@ pages:
 paginator:
   layout: 'paginator'
   per_page: 10
-  namespace: 'posts'
+  namespace: '/posts/'
 
 markdown:
   toc_title: '<h1>目录：</h1>'
