--- a/.github/workflows/publish_blog_to_github_pages.yml
+++ b/.github/workflows/publish_blog_to_github_pages.yml
@@ -18,8 +18,5 @@ jobs:
       with:
         go-version: 1.15
 
-    - name: Build
-      run: go build -v ./...
-
-    - name: Test
-      run: go test -v ./...
+    - name: run
+      uses: github.com/hugozhu/gor 2.2
