--- a/.github/workflows/publish_blog_to_github_pages.yml
+++ b/.github/workflows/publish_blog_to_github_pages.yml
@@ -7,7 +7,6 @@ on:
     branches: [ master ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -19,4 +18,4 @@ jobs:
         go-version: 1.15
 
     - name: run
-      uses: github.com/hugozhu/gor 2.2
+      uses: github.com/hugozhu/gor@2.2
