--- a/.github/workflows/publish_blog_to_github_pages.yml
+++ b/.github/workflows/publish_blog_to_github_pages.yml
@@ -17,5 +17,5 @@ jobs:
       with:
         go-version: 1.15
 
-    - name: run
-      uses: github.com/hugozhu/gor@2.2
+    - name: Compile Blog
+      uses: bash go run github.com/hugozhu/gor/gor compile
