--- a/.github/workflows/publish_blog_to_github_pages.yml
+++ b/.github/workflows/publish_blog_to_github_pages.yml
@@ -26,9 +26,8 @@ jobs:
         gor compile
     - name: Publish blog
       run: |
-        cd compile
-        git status     
-      
+        cd compiled
+        git status
       
       
     
