--- a/.github/workflows/publish_blog_to_github_pages.yml
+++ b/.github/workflows/publish_blog_to_github_pages.yml
@@ -28,6 +28,9 @@ jobs:
       run: |
         cd compiled
         git status
+        git add *
+        git commit -m "Updated" .
+        git push origin
       
       
     
