--- a/.github/workflows/publish_blog_to_github_pages.yml
+++ b/.github/workflows/publish_blog_to_github_pages.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        token: ${{ secrets.TOKEN }}
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
@@ -20,7 +22,7 @@ jobs:
     - name: Clone blog
       run: |
         mkdir compiled
-        git clone https://github.com/hugozhu/hugozhu.github.com compiled
+        git clone https://hugozhu:${{ secrets.TOKEN }}@github.com/hugozhu/hugozhu.github.com compiled
     - name: Compile blog
       run: |
         gor compile
